# Constraint_solver

./: .gitignore  CMakeLists.txt  README.md
include/: constraint.h  point.h  solver.h  solver_config.h  vec2.h
include/constraints/: angle_constraint.h  coincident_constraint.h  distance_constraint.h  fixed_point_constraint.h  horizontal_constraint.h  vertical_constraint.h
src/: main.cpp  point.cpp  solver.cpp  vec2.cpp
src/constraints/: angle_constraint.cpp  coincident_constraint.cpp  distance_constraint.cpp  fixed_point_constraint.cpp  horizontal_constraint.cpp  vertical_constraint.cpp
visualizer/: app.js  index.html  renderer.js  scenarios.js  style.css
